@@ -35,12 +35,13 @@ class Settings(UserPrefBase):
 
     def handle_form(self):
         _ = self._
-        form = self.request.form
+        request = self.request
+        form = request.form
 
         if form.has_key('cancel'):
             return
 
-        if self.request.request_method != 'POST':
+        if request.request_method != 'POST':
             return
 
         password = form.get('password', [''])[0]
@@ -49,6 +50,12 @@ class Settings(UserPrefBase):
         # Check if password is given and matches with password repeat
         if password != password2:
             return _("Passwords don't match!")
+
+        pw_checker = request.cfg.password_checker
+        if pw_checker:
+            pw_error = pw_checker(request.user.name, password)
+            if pw_error:
+                return _("Password not acceptable: %s") % pw_error
 
         # Encode password
         if password and not password.startswith('{SHA}'):
